Fixed obsolete issue

--- a/srlc/srl/templates/srl/changelog.html
+++ b/srlc/srl/templates/srl/changelog.html
@@ -74,9 +74,17 @@
                     </div>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="currentversions" data-bs-parent="#accordionversions">
                         <div class="accordion-body">
-                            | <a href="#v22">v2.2 - The BIG Update</a> | <a href="#v221">v2.2.1</a> | <a href="#v2211">v2.2.1.1 (current)</a> |
+                            | <a href="#v22">v2.2 - The BIG Update</a> | <a href="#v221">v2.2.1</a> | <a href="#v2211">v2.2.1.1</a> | <a href="#v2212">v2.2.1.2 (current)</a>
                             <hr />
-                            <h3 id="v2211">v2.2.1.1 (current)</h3>
+                            <h3 id="v2212">v2.2.1.2</h3>
+                            <h6>April 3, 2025</h6>
+                            <ul>
+                                <li>Fixed an isue where runs were not properly set to obsolete when a new run was uploaded.</li>
+                            </ul>
+                            <a href="#top">Back to Top</a>
+                            <hr />
+
+                            <h3 id="v2211">v2.2.1.1</h3>
                             <h6>March 24, 2025</h6>
                             <ul>
                                 <li>Added THPS1+2 Any% Tour Mode (All Tours, New Game) and All Goals & Golds (All Tours, New Game) to the main page.</li>
