--- a/srlc/srl/templates/srl/main.html
+++ b/srlc/srl/templates/srl/main.html
@@ -84,7 +84,53 @@
             </div>
 
             <div class="side-table">
-                <div class="latest-wrs">
+                {% if streamers.count > 0 %}
+                <div class="now-streaming-table">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th colspan="2" class="bg-info">Currently Streaming</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for streamer in streamers %}
+                                <tr>
+                                    <td>
+                                        <a href="{{ streamer.streamer.twitch }}" target="_blank"><img src="{% static 'pfp/'|add:streamer.streamer.id|add:'.jpg' %}" onerror="this.onerror=null; this.src='{% static 'pfp/default.png' %}'" title="{{ streamer.streamer.name }}" class="pfp-img-streaming" /></a>
+                                    </td>
+                                    <td class="now-streaming">
+                                        {% if streamer.streamer.countrycode.id != "vh" %}
+                                            {% if streamer.streamer.nickname %}
+                                                <img src="https://flagcdn.com/h20/{{ streamer.streamer.countrycode.id }}.png" class="flag-streaming" title="{{ streamer.streamer.countrycode.name }}" alt="{{ streamer.streamer.countrycode.name }}" onerror="this.onerror=null; this.src=''" /> <div style="display: inline;" title="{{streamer.streamer.name}}">{{ streamer.streamer.nickname }}</div>
+                                            {% else %}
+                                                <img src="https://flagcdn.com/h20/{{ streamer.streamer.countrycode.id }}.png" class="flag-streaming" title="{{ streamer.streamer.countrycode.name }}" alt="{{ streamer.streamer.countrycode.name }}" onerror="this.onerror=null; this.src=''" /> {{ streamer.streamer.name }}
+                                            {% endif %}
+                                        {% elif streamer.streamer.countrycode.id == "vh" %}
+                                            {% if streamer.streamer.nickname %}
+                                                <img src="{% static 'srl/misc/vh.png' %}" class="flag-streaming" title="{{ streamer.streamer.countrycode.name }}" alt="{{ streamer.streamer.countrycode.name }}" /> <div style="display: inline;" title="{{streamer.streamer.name}}">{{ streamer.streamer.nickname }}</div>
+                                            {% else %}
+                                                <img src="{% static 'srl/misc/vh.png' %}" class="flag-streaming" title="{{ streamer.streamer.countrycode.name }}" alt="{{ streamer.streamer.countrycode.name }}" /> {{ streamer.streamer.name }}
+                                            {% endif %}
+                                        {% else %}
+                                            {% if streamer.streamer.nickname %}
+                                                <div style="display: inline;" title="{{streamer.streamer.name}}">{{ streamer.streamer.nickname }}</div>
+                                            {% else %}
+                                                {{ streamer.streamer.name }}
+                                            {% endif %}
+                                        {% endif %}
+                                        | <a href="/player/{{ streamer.streamer.name }}">Profile</a> | <a href="{{ streamer.streamer.twitch }}" target="_blank">Twitch</a>
+                                        <br />
+                                        <div class="stream-game">{{ streamer.game.name }}</div>
+                                        <div class="stream-title">{{ streamer.title }}</div>
+                                        <div class="stream-time">{{ streamer.stream_time|time_since }}</div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% endif %}
+                <div class="latest-wrs-table">
                     <table  class="table table-striped">
                         <thead>
                             <tr>
@@ -103,18 +149,18 @@
                             {% for wr in new_wrs %}
                                 <tr>
                                     {% if wr.game.abbr == "thps12" %}
-                                        <td>THPS1+2</td>
+                                        <td class="side-table-td">THPS1+2</td>
                                     {% elif wr.game.abbr == "thps34" %}
-                                        <td>THPS3+4</td>
+                                        <td class="side-table-td">THPS3+4</td>
                                     {% else %}
-                                        <td>{{ wr.game.abbr|upper }}</td>
+                                        <td class="side-table-td">{{ wr.game.abbr|upper }}</td>
                                     {% endif %}
-                                    <td>{{ wr.subcategory }}</td>
+                                    <td class="side-table-td">{{ wr.subcategory }}</td>
                                     {% if wr.player.countrycode %}
                                         {% if wr.player.countrycode.id == "vh" %}
-                                            <td><img src="{% static 'srl/misc/vh.png'%}" title="Valhalla" onerror="this.onerror=null; this.src=''" height="15" />
+                                            <td class="side-table-td"><img src="{% static 'srl/misc/vh.png'%}" title="Valhalla" onerror="this.onerror=null; this.src=''" height="15" />
                                         {% else %}
-                                            <td><img src="https://flagcdn.com/h20/{{ wr.player.countrycode.id }}.png" title="{{ wr.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
+                                            <td class="side-table-td"><img src="https://flagcdn.com/h20/{{ wr.player.countrycode.id }}.png" title="{{ wr.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
                                         {% endif %}
                                             {% if wr.player.nickname %}
                                                 <a href="/player/{{ wr.player.name }}">{{ wr.player.nickname }}</a></td>
@@ -128,7 +174,7 @@
                                             <a href="/player/{{ wr.player.name }}">{{ wr.player.name }}</a></td>
                                         {% endif %}
                                     {% endif %}
-                                    <td>
+                                    <td class="side-table-td">
                                         {% if wr.time_secs > 0 %}
                                             <a href="{{ wr.url }}" target="_blank">{{ wr.time }}</a>
                                         {% elif wr.timenl_secs > 0 %}
@@ -143,7 +189,7 @@
                     </table>
                 </div>
 
-                <div class="latest-runs">
+                <div class="latest-runs-table">
                     <table id="leaderboard-table-3" class="table table-striped">
                         <thead>
                             <tr>
@@ -162,29 +208,29 @@
                             {% for run in new_runs %}
                                 <tr>
                                     {% if run.game.abbr == "thps12" %}
-                                        <td>THPS1+2</td>
+                                        <td class="side-table-td">THPS1+2</td>
                                     {% elif run.game.abbr == "thps34" %}
-                                        <td>THPS3+4</td>
+                                        <td class="side-table-td">THPS3+4</td>
                                     {% else %}
-                                        <td>{{ run.game.abbr|upper }}</td>
+                                        <td class="side-table-td">{{ run.game.abbr|upper }}</td>
                                     {% endif %}
-                                    <td>{{ run.subcategory }}</td>
+                                    <td class="side-table-td">{{ run.subcategory }}</td>
                                     {% if run.player.countrycode %}
-                                        <td><img src="https://flagcdn.com/h20/{{ run.player.countrycode.id }}.png" title="{{ run.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
+                                        <td class="side-table-td"><img src="https://flagcdn.com/h20/{{ run.player.countrycode.id }}.png" title="{{ run.player.countrycode.name }}" onerror="this.onerror=null; this.src=''" height="15" />
                                             {% if run.player.nickname %}
                                                 <a href="/player/{{ run.player.name }}">{{ run.player.nickname }}</a></td>
                                             {% else %}
                                                 <a href="/player/{{ run.player.name }}">{{ run.player.name }}</a></td>
                                             {% endif %}
                                     {% else %}
-                                        <td>
+                                        <td class="side-table-td">
                                         {% if run.player.nickname %}
                                             <a href="/player/{{ run.player.name }}">{{ run.player.nickname }}</a></td>
                                         {% else %}
                                             <a href="/player/{{ run.player.name }}">{{ run.player.name }}</a></td>
                                         {% endif %}
                                     {% endif %}
-                                    <td>
+                                    <td class="side-table-td">
                                         {% if run.time_secs > 0 %}
                                             <a href="{{ run.url }}" target="_blank">{{ run.time }}</a>
                                         {% elif run.timenl_secs > 0 %}
