Improved stream support, endpoints, and optimized code.

--- a/srlc/srl/static/srl/misc/css.css
+++ b/srlc/srl/static/srl/misc/css.css
@@ -155,8 +155,8 @@ td.side-table-td{
     padding: 10px;
 }
 .pfp-img{
-    width: 100px;
-    height: 100%;
+    width: 125px;
+    height: 125px;
     vertical-align: middle;
 }
 .profile-info{
