--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -145,6 +145,9 @@
             <li class="nav-item me-3 me-lg-0">
                 <a href="/bluesky" class="soc" target="_blank"><i class="fab fa-bluesky fa-lg" alt="Community Bluesky" title="Community Bluesky"></i></a>
             </li>
+            {% comment %} <li class="nav-item me-3 me-lg-0">
+                <a href="/twitter" class="soc" target="_blank"><i class="fab fa-twitter fa-lg" alt="Community Twitter" title="Community Twitter"></i></a>
+            </li> {% endcomment %}
             <li class="nav-item me-3 me-lg-0">
                 <a href="/src" class="soc" target="_blank"><i class="fas fa-trophy fa-lg" alt="Communuty Speedrun.com Leaderboards" title="Community Speedrun.com Leaderboards"></i></a>
             </li>
