--- a/srlc/srl/templates/srl/il_leaderboard_expanded.html
+++ b/srlc/srl/templates/srl/il_leaderboard_expanded.html
@@ -2,22 +2,22 @@
     <head>
         {% load static %}
         <meta charset="utf-8">
-        <meta name="description" content="THPS Speedrun Leaderboards">
-        <meta name="author" content="THPS Speedrun Community">
+        <meta name="description" content="{{ ENV_WEBSITE_DESCRIPTION }}">
+        <meta name="author" content="{{ ENV_WEBSITE_AUTHOR }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="speedrun, leaderboards, thps, thps1, thps2, thps, World Record, Personal Best">
+        <meta name="keywords" content="{{ ENV_WEBSITE_KEYWORDS }}">
 
         {% if "/ils" in request.path %}
             {% if game_abbr == "thps12" %}
-                <title>THPS1+2 IL Leaderboards - thps.run</title>
+                <title>THPS1+2 IL Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% else %}
-                <title>{{ game_abbr|upper }} IL Leaderboards - thps.run</title>
+                <title>{{ game_abbr|upper }} IL Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% endif %}
         {% else %}
             {% if game_abbr == "thps12" %}
-                <title>THPS1+2 Full Game Leaderboards - thps.run</title>
+                <title>THPS1+2 Full Game Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% else %}
-                <title>{{ game_abbr|upper }} Full Game Leaderboards - thps.run</title>
+                <title>{{ game_abbr|upper }} Full Game Leaderboards - {{ ENV_WEBSITE_NAME }}</title>
             {% endif %}
         {% endif %}
 
