--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -33,103 +33,118 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Main LBs</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thps1/">THPS1</a></li>
-                                <li><a class="dropdown-item" href="/thps2/">THPS2</a></li>
-                                <li><a class="dropdown-item" href="/thps2x/">THPS2x</a></li>
-                                <li><a class="dropdown-item" href="/thps3/">THPS3</a></li>
-                                <li><a class="dropdown-item" href="/thps4/">THPS4</a></li>
-                                <li><a class="dropdown-item" href="/thps5/">THPS5</a></li>
-                                <li><a class="dropdown-item" href="/thhd/">THHD</a></li>
-                                <li><a class="dropdown-item" href="/thps12/">THPS1+2</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thug1/">THUG1</a></li>
-                                <li><a class="dropdown-item" href="/thug2/">THUG2</a></li>
-                                <li><a class="dropdown-item" href="/thaw/">THAW</a></li>
-                                <li><a class="dropdown-item" href="/thp8/">THP8</a></li>
-                                <li><a class="dropdown-item" href="/thpg/">THPG</a></li>
-                                <li><a class="dropdown-item" href="/thdj/">THDJ</a></li>
-                                <li><a class="dropdown-item" href="/thugpro/">THUG PRO</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Handheld</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thps1gbc/">THPS1 GBC</a></li>
-                                <li><a class="dropdown-item" href="/thps2gba/">THPS2 GBA</a></li>
-                                <li><a class="dropdown-item" href="/thps3gba/">THPS3 GBA</a></li>
-                                <li><a class="dropdown-item" href="/thps4gba/">THPS4 GBA</a></li>
-                                <li><a class="dropdown-item" href="/thug1gba/">THUG1 GBA</a></li>
-                                <li><a class="dropdown-item" href="/thug2remix/">THUG2 Remix</a></li>
-                                <li><a class="dropdown-item" href="/thas/">THAS</a></li>
-                                <li><a class="dropdown-item" href="/thp8psp/">THP8 PSP</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thpsce/">THPS CE</a></li>
-                                <li><a class="dropdown-item" href="/thps4ce/">THPS4 CE</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps1/">THPS1</a></li>
+                            <li><a class="dropdown-item" href="/thps2/">THPS2</a></li>
+                            <li><a class="dropdown-item" href="/thps2x/">THPS2x</a></li>
+                            <li><a class="dropdown-item" href="/thps3/">THPS3</a></li>
+                            <li><a class="dropdown-item" href="/thps4/">THPS4</a></li>
+                            <li><a class="dropdown-item" href="/thps5/">THPS5</a></li>
+                            <li><a class="dropdown-item" href="/thhd/">THHD</a></li>
+                            <li><a class="dropdown-item" href="/thps12/">THPS1+2</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thug1/">THUG1</a></li>
+                            <li><a class="dropdown-item" href="/thug2/">THUG2</a></li>
+                            <li><a class="dropdown-item" href="/thaw/">THAW</a></li>
+                            <li><a class="dropdown-item" href="/thp8/">THP8</a></li>
+                            <li><a class="dropdown-item" href="/thpg/">THPG</a></li>
+                            <li><a class="dropdown-item" href="/thdj/">THDJ</a></li>
+                            <li><a class="dropdown-item" href="/thugpro/">THUG PRO</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Handheld</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps1gbc/">THPS1 GBC</a></li>
+                            <li><a class="dropdown-item" href="/thps2gba/">THPS2 GBA</a></li>
+                            <li><a class="dropdown-item" href="/thps3gba/">THPS3 GBA</a></li>
+                            <li><a class="dropdown-item" href="/thps4gba/">THPS4 GBA</a></li>
+                            <li><a class="dropdown-item" href="/thug1gba/">THUG1 GBA</a></li>
+                            <li><a class="dropdown-item" href="/thug2remix/">THUG2 Remix</a></li>
+                            <li><a class="dropdown-item" href="/thas/">THAS</a></li>
+                            <li><a class="dropdown-item" href="/thp8psp/">THP8 PSP</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thpsce/">THPS CE</a></li>
+                            <li><a class="dropdown-item" href="/thps4ce/">THPS4 CE</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">IL LBs</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thps1/ils">THPS1</a></li>
-                                <li><a class="dropdown-item" href="/thps2/ils">THPS2</a></li>
-                                <li><a class="dropdown-item" href="/thps3/ils">THPS3</a></li>
-                                <li><a class="dropdown-item" href="/thps4/ils">THPS4</a></li>
-                                <li><a class="dropdown-item" href="/thps12/ils">THPS1+2</a></li>
-                                </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thug1/ils">THUG1</a></li>
-                                <li><a class="dropdown-item" href="/thug2/ils">THUG2</a></li>
-                                <li><a class="dropdown-item" href="/thaw/ils">THAW</a></li>
-                                <li><a class="dropdown-item" href="/thpg/ils">THPG</a></li>
-                                <li><a class="dropdown-item" href="/thdj/ils">THDJ</a></li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps1/ils">THPS1</a></li>
+                            <li><a class="dropdown-item" href="/thps2/ils">THPS2</a></li>
+                            <li><a class="dropdown-item" href="/thps3/ils">THPS3</a></li>
+                            <li><a class="dropdown-item" href="/thps4/ils">THPS4</a></li>
+                            <li><a class="dropdown-item" href="/thps12/ils">THPS1+2</a></li>
                             </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="/thps4ce/ils">THPS4 CE</a></li>
-                                <li><a class="dropdown-item" href="/thps12ce/ils">THPS1+2 CE</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thug1/ils">THUG1</a></li>
+                            <li><a class="dropdown-item" href="/thug2/ils">THUG2</a></li>
+                            <li><a class="dropdown-item" href="/thaw/ils">THAW</a></li>
+                            <li><a class="dropdown-item" href="/thpg/ils">THPG</a></li>
+                            <li><a class="dropdown-item" href="/thdj/ils">THDJ</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps4ce/ils">THPS4 CE</a></li>
+                            <li><a class="dropdown-item" href="/thps12ce/ils">THPS1+2 CE</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
             <div class="vr"></div>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mods</a>
+
+            {% if navbar_docs %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Guides</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PARTYMOD</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps2" target="_blank">THPS2</a></li>
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps3" target="_blank">THPS3</a></li>
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps4" target="_blank">THPS4</a></li>
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug1" target="_blank">THUG1</a></li>
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug2" target="_blank">THUG2</a></li>
-                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thaw" target="_blank">THAW</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">ClownJob'd</a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1291.0" target="_blank">THUG1</a></li>
-                                <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1529.0" target="_blank">THUG2</a></li>
-                            </ul>
-                        </li>
+                        {% for game in navbar_docs %}
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">{{ game.game|upper }}</a>
+                                <ul class="dropdown-menu dropdown-submenu">
+                                {% for page in game.pages%}
+                                    <li><a class="dropdown-item" href="{{ page.url }}">{{ page.title }}</a></li>
+                                {% endfor %}
+                                </ul>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </li>
+            {% endif %}
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mods</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PARTYMOD</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps2" target="_blank">THPS2</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps3" target="_blank">THPS3</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps4" target="_blank">THPS4</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug1" target="_blank">THUG1</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug2" target="_blank">THUG2</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thaw" target="_blank">THAW</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">ClownJob'd</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1291.0" target="_blank">THUG1</a></li>
+                            <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1529.0" target="_blank">THUG2</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
         </ul>
         <ul class="navbar-nav social ml-autio">
